--- a/src/assets/sass/_theme.scss
+++ b/src/assets/sass/_theme.scss
@@ -185,3 +185,75 @@
     }
   }
 }
+
+// carousel
+.carousel-food {
+  margin-top: 40px;
+
+  h3 {
+    line-height: 32px;
+    font-size: 26px;
+    color: #1F1F1F;
+    margin-bottom: 32px;
+    display: inline-block;
+  }
+
+  &__navigator {
+    float: right;
+
+    button {
+      &:first-of-type {
+        margin-right: 4px;
+      }
+    }
+  }
+
+  &__row {
+    overflow: hidden;
+
+    > .row {
+      transition: transform .3s ease-in-out;
+      flex-wrap: nowrap;
+    }
+
+    &--item {
+      h5 {
+        line-height: 24px;
+        font-size: 16px;
+        color: #1F1F1F;
+        font-weight: 400;
+        margin-bottom: 0;
+      }
+
+      p {
+        line-height: 20px;
+        font-size: 14px;
+        color: #757575;
+        margin-bottom: 0;
+
+        span {
+          margin-right: 3px;
+          margin-left: 3px;
+
+          &:first-of-type {
+            margin-left: 0;
+          }
+
+          &:last-of-type {
+            margin-right: 0;
+          }
+        }
+      }
+
+      .badge {
+        margin-top: 8px;
+        padding: 2px 8px;
+        background-color: #F5F5F5;
+        line-height: 20px;
+        font-size: 14px;
+        font-weight: 400;
+        margin-right: 8px;
+      }
+    }
+  }
+}
