--- a/src/assets/sass/_theme.scss
+++ b/src/assets/sass/_theme.scss
@@ -257,3 +257,64 @@
     }
   }
 }
+
+// home-intro
+.home-intro {
+  margin-top: 40px;
+  margin-bottom: 40px;
+
+  .figure {
+    width: 100%;
+
+    > img {
+      width: 100%;
+      margin-bottom: 16px;
+    }
+  }
+
+  h5 {
+    line-height: 32px;
+    font-size: 26px;
+    margin-bottom: 8px;
+    color: #1f1f1f;
+  }
+
+  p {
+    line-height: 24px;
+    font-size: 16px;
+    color: #1f1f1f;
+
+    a {
+      margin-left: 13px;
+      margin-right: 13px;
+      font-size: 16px;
+      color: #1f1f1f;
+      vertical-align: middle;
+      font-weight: 500;
+
+      img {
+        width: 16px;
+        margin-top: -6px;
+      }
+
+      &:hover {
+        text-decoration: underline;
+      }
+
+      &:first-of-type {
+        margin-left: 20px;
+      }
+    }
+  }
+
+  &__action {
+    display: inline-block;
+    color: #247a00 !important;
+    line-height: 24px;
+    font-size: 16px;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
