--- a/src/assets/sass/_theme.scss
+++ b/src/assets/sass/_theme.scss
@@ -193,7 +193,7 @@
   h3 {
     line-height: 32px;
     font-size: 26px;
-    color: #1F1F1F;
+    color: #1f1f1f;
     margin-bottom: 32px;
     display: inline-block;
   }
@@ -212,7 +212,7 @@
     overflow: hidden;
 
     > .row {
-      transition: transform .3s ease-in-out;
+      transition: transform 0.3s ease-in-out;
       flex-wrap: nowrap;
     }
 
@@ -220,7 +220,7 @@
       h5 {
         line-height: 24px;
         font-size: 16px;
-        color: #1F1F1F;
+        color: #1f1f1f;
         font-weight: 400;
         margin-bottom: 0;
       }
@@ -248,7 +248,7 @@
       .badge {
         margin-top: 8px;
         padding: 2px 8px;
-        background-color: #F5F5F5;
+        background-color: #f5f5f5;
         line-height: 20px;
         font-size: 14px;
         font-weight: 400;
