--- a/src/assets/sass/_theme.scss
+++ b/src/assets/sass/_theme.scss
@@ -318,3 +318,33 @@
     }
   }
 }
+
+// cities
+.cities {
+  h3 {
+    margin-bottom: 0;
+    display: inline-block;
+  }
+
+  &__btn-more {
+    color: #247a00 !important;
+    line-height: 24px;
+    float: right;
+    font-weight: 500;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  &__items {
+    a {
+      display: block;
+      line-height: 24px;
+      font-size: 16px;
+      color: #1f1f1f;
+      margin-bottom: 20px;
+      margin-top: 20px;
+    }
+  }
+}
