fix: modify margins

--- a/src/assets/sass/_theme.scss
+++ b/src/assets/sass/_theme.scss
@@ -322,7 +322,7 @@
 // cities
 .cities {
   h3 {
-    margin-bottom: 0;
+    margin-bottom: 10px;
     display: inline-block;
   }
 
@@ -354,7 +354,7 @@
   padding-bottom: 50px;
 
   h3 {
-    margin-bottom: 0;
+    margin-bottom: 10px;
     display: inline-block;
   }
 
@@ -398,7 +398,7 @@
       line-height: 24px;
       font-size: 16px;
       color: #1f1f1f;
-      margin-top: 5px;
+      margin-top: 10px;
     }
   }
 }
