fix: icon place

--- a/src/assets/sass/_theme.scss
+++ b/src/assets/sass/_theme.scss
@@ -253,6 +253,10 @@
         font-size: 14px;
         font-weight: 400;
         margin-right: 8px;
+
+        img {
+          margin-top: -3px;
+        }
       }
     }
   }
