--- a/src/assets/sass/_theme.scss
+++ b/src/assets/sass/_theme.scss
@@ -99,20 +99,21 @@
   position: relative;
 
   &__backgrounds {
-    &--left {
+    > img {
       position: absolute;
       bottom: 0;
       left: 0;
       height: 100%;
       z-index: 1;
+      min-width: 100%;
+    }
+
+    &--left {
+      left: 0;
     }
 
     &--right {
-      position: absolute;
-      bottom: 0;
       right: 0;
-      height: 100%;
-      z-index: 1;
     }
   }
 
